--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -95,7 +95,7 @@ spring:
   profiles: prod-mysql
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://vwkj6eq6.2419.dnstoo.com:5501/q4r40k?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://${zfile.db.url}:5501/q4r40k?useUnicode=true&characterEncoding=utf8
     username: q4r40k_f
     password: ${zfile.db.pwd}
 ---
